# servo_browser

./: Cargo.toml  README.md  build.rs  crash_handler.rs  lib.rs  main.rs  panic_hook.rs  parser.rs  prefs.rs  running_app_state.rs  webdriver.rs  window.rs
desktop/: app.rs  cli.rs  dialog.rs  event_loop.rs  gui.rs  headed_window.rs  headless_window.rs  mod.rs  tracing.rs  webxr.rs
desktop/protocols/: servo.rs
egl/: app.rs
egl/android/: mod.rs  resources.rs
egl/ohos/: mod.rs
platform/linux/: com.github.leo030303.servo_browser.desktop  com.github.leo030303.servo_browser.yml
resources/resource_protocol/: newtab.css  newtab.html
src/: app.rs  browser_window.rs  gamepad.rs  gui.rs  headed_window.rs  keyutils.rs  lib.rs  main.rs  prefs.rs  running_app_state.rs  test.rs  tracing.rs  webxr.rs  window.rs
src/data_storage/: bookmarks.rs  database.rs  downloads.rs  history.rs  mod.rs  tabs.rs
src/misc_utils/: accelerated_gl_media.rs  mod.rs  webxr.rs
src/panic_utils/: crash_handler.rs  mod.rs  panic_hook.rs  tracing.rs
src/user_interface/: browser_tab.rs  gui.rs  mod.rs
