[package]
name = "servo_browser"
build = "build.rs"
version = "0.0.3"
authors = ["Leo Ring"]
edition = "2024"

[lib]
name = "servo_browser"
path = "lib.rs"
bench = false

[[bin]]
name = "servo_browser"
path = "main.rs"
bench = false

# Some of these dependencies are only needed for a specific target OS, but
# since build-scripts can't detect the Cargo target OS at build-time, we
# must unconditionally add these dependencies. See https://github.com/rust-lang/cargo/issues/4932
[build-dependencies]
# macOS only
cc = "1.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "Servo"
LegalCopyright = "© The Servo Project Developers"
OriginalFilename = "servo.exe"
ProductName = "Servo"

[features]
default = ["libservo/clipboard", "js_jit", "max_log_level", "webgpu", "webxr"]
crown = ["libservo/crown"]
debugmozjs = ["libservo/debugmozjs"]
jitspew = ["libservo/jitspew"]
js_backtrace = ["libservo/js_backtrace"]
js_jit = ["libservo/js_jit"]
max_log_level = ["log/release_max_level_info"]
media-gstreamer = ["libservo/media-gstreamer"]
native-bluetooth = ["libservo/native-bluetooth"]
profilemozjs = ["libservo/profilemozjs"]
refcell_backtrace = ["libservo/refcell_backtrace"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "libservo/tracing"]
tracing-hitrace = ["tracing", "dep:hitrace"]
tracing-perfetto = ["tracing", "dep:tracing-perfetto"]
vello = ["libservo/vello"]
vello_cpu = ["libservo/vello_cpu"]
webgl_backtrace = ["libservo/webgl_backtrace"]
webgpu = ["libservo/webgpu"]
webxr = ["libservo/webxr"]

[dependencies]
bpaf = { version = "0.9.20", features = ["derive"] }
cfg-if = { version = "1.0.4" }
crossbeam-channel = { version = "0.5" }
dpi = { version = "0.1" }
egui_extras = {version = "0.33.3", features = ["svg"]}
euclid = { version = "0.22" }
hitrace = { version = "0.1.5", optional = true }
image = { version = "0.25", default-features = false, features = ["avif", "rayon", "bmp", "gif", "ico", "jpeg", "png", "webp"] }
ipc-channel = { version = "0.20.2" }
keyboard-types = { version = "0.8.3", features = ["serde", "webdriver"] }
libc = { version = "0.2" }
libservo = { git = "https://github.com/servo/servo.git", rev = "e81e92f", features = ["background_hang_monitor", "bluetooth", "testbinding", "vello_cpu"], default-features = false }
log = { version = "0.4.29" }
mime_guess = { version = "2.0.5" }
raw-window-handle = { version = "0.6" }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio = { version = "1" }
tracing = { version = "0.1.43", optional = true }
tracing-perfetto = { version = "0.1.5", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true, features = ["env-filter"] }
url = { version = "2.5" }
webdriver_server = { git = "https://github.com/servo/servo.git", rev = "e81e92f" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
jni = "0.21.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
backtrace = { version = "0.3" }

[target.'cfg(target_env = "ohos")'.dependencies]
env_filter = "0.1.4"
euclid = { version = "0.22" }
hilog = "0.2.2"
# force inprocess until we add multi-process support for ohos
ipc-channel = { version = "0.20.2", features = ["force-inprocess"] }
napi-derive-ohos = "1.1.4"
napi-ohos = "1.1.4"
ohos-abilitykit-sys = { version = "0.1.2", features = ["api-14"] }
ohos-deviceinfo = "0.1.0"
ohos-ime = "0.4.0"
ohos-ime-sys = "0.2.2"
ohos-vsync = "0.1.3"
ohos-window-manager-sys = { version = "0.1", features = ["api-14"] }
xcomponent-sys = { version = "0.3.4", features = ["api-14", "keyboard-types"] }

[target.'cfg(any(target_os = "android", target_env = "ohos"))'.dependencies]
nix = { version = "0.30", features = ["fs"] }
serde_json = { version = "1.0" }
surfman = { version = "0.11.0", features = ["sm-angle-default"] }

[target.'cfg(not(any(target_os = "android", target_env = "ohos")))'.dependencies]
dirs = "6.0"
egui = { version = "0.33.2", features = ["accesskit"] }
egui-file-dialog = "0.12.0"
egui-winit = { version = "0.33.2", default-features = false, features = ["accesskit", "clipboard", "wayland"] }
egui_glow = { version = "0.33.2", features = ["winit"] }
gilrs = "0.11.0"
glow = { version = "0.16.0" }
headers = { version = "0.4" }
serde_json = { version = "1.0" }
# For optional feature servo_allocator/use-system-allocator and servo_allocator/allocation-tracking
servo_allocator = { git = "https://github.com/servo/servo.git", rev = "e81e92f" }
surfman = { version = "0.11.0", features = ["sm-raw-window-handle-06", "sm-x11"] }
winit = { version = "0.30.12" }

[target.'cfg(any(all(target_os = "linux", not(target_env = "ohos")), target_os = "macos"))'.dependencies]
sig = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
libservo = { git = "https://github.com/servo/servo.git", rev = "e81e92f", features = ["no-wgl"] }
windows-sys = { version = "0.61", features = ["Win32_Graphics_Gdi", "Win32_System_Console"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSColorSpace",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.3.1", default-features = false, features = [
    "std",
] }
