[package]
name = "servo_browser"
build = "build.rs"
version = "0.0.3"
authors = ["Leo Ring"]
edition = "2024"

# Some of these dependencies are only needed for a specific target OS, but
# since build-scripts can't detect the Cargo target OS at build-time, we
# must unconditionally add these dependencies. See https://github.com/rust-lang/cargo/issues/4932
[build-dependencies]
# macOS only
cc = "1.2"

[features]
webxr = ["libservo/webxr"]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "Servo"
LegalCopyright = "© The Servo Project Developers"
OriginalFilename = "servo.exe"
ProductName = "Servo"

[dependencies]
bpaf = { version = "0.9.20", features = ["derive"] }
cfg-if = { version = "1.0.4" }
crossbeam-channel = { version = "0.5" }
dpi = { version = "0.1" }
egui_extras = {version = "0.33.3", features = ["svg"]}
euclid = { version = "0.22" }
hitrace = { version = "0.1.5", optional = true }
image = { version = "0.25", default-features = false, features = ["avif", "rayon", "bmp", "gif", "ico", "jpeg", "png", "webp"] }
ipc-channel = { version = "0.20.2" }
keyboard-types = { version = "0.8.3", features = ["serde"] }
libc = { version = "0.2" }
libservo = { git = "https://github.com/servo/servo.git", rev = "6623cc1", features = ["gamepad", "background_hang_monitor", "bluetooth", "testbinding", "vello_cpu", "clipboard"], default-features = false }
log = { version = "0.4.29" }
mime_guess = { version = "2.0.5" }
raw-window-handle = { version = "0.6" }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio = { version = "1" }
url = { version = "2.5" }
backtrace = { version = "0.3" }
dirs = "6.0"
egui = { version = "0.33.2", features = ["accesskit"] }
egui-file-dialog = "0.12.0"
egui-winit = { version = "0.33.2", default-features = false, features = ["accesskit", "clipboard", "wayland"] }
egui_glow = { version = "0.33.2", features = ["winit"] }
gilrs = "0.11.0"
glow = { version = "0.16.0" }
headers = { version = "0.4" }
serde_json = { version = "1.0" }
# For optional feature servo_allocator/use-system-allocator and servo_allocator/allocation-tracking
servo_allocator = { git = "https://github.com/servo/servo.git", rev = "6623cc1" }
surfman = { version = "0.11.0", features = ["sm-raw-window-handle-06", "sm-x11"] }
winit = { version = "0.30.12" }
mundy = "0.2.2"
rusqlite = {version = "0.37.0", features = ["chrono"]}
chrono = "0.4.42"
bytesize = "2.3.1"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
sig = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
libservo = { git = "https://github.com/servo/servo.git", rev = "6623cc1", features = ["no-wgl"] }
windows-sys = { version = "0.61", features = ["Win32_Graphics_Gdi", "Win32_System_Console"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSColorSpace",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.3.1", default-features = false, features = [
    "std",
] }
